přidán flex displey

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sapiente omnis labore eveniet consequuntur cumque nisi recusandae fugit in optio error rerum ut fuga velit eius, sequi vitae! Eveniet, dolor?
         </p>
     </div>
-    <div>
-        <ul>
-            <li>ahoj</li>
-            <li>ahoj</li>
-            <li>ahoj</li>
-        </ul>
-    </div>
-    <div>
-        <ol>
-            <li>ahoj</li>
-            <li>ahoj</li>
-            <li>ahoj</li>
-            <li>ahoj</li>
-            <li>ahoj</li>
-             <li><strong>Nazdarek</strong></li>
+        <div class="seznamy">
+        <div>
+            <ul>
+                <li>ahoj</li>
+                <li>ahoj</li>
+                <li>ahoj</li>
+            </ul>
+        </div>
+        <div>
+            <ol>
+                <li>ahoj</li>
+                <li>ahoj</li>
+                <li>ahoj</li>
+                <li>ahoj</li>
+                <li>ahoj</li>
+                <li><strong>Nazdarek</strong></li>
 
-        </ol>
+            </ol>
+        </div>
     </div>
     
 </body>
